--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: sans-serif;
+    background-color: #fff;
   }
   
   h1 {
@@ -9,6 +10,11 @@ body {
   form {
     margin: 0 auto;
     width: 400px;
+    background-color: #f5f5f5;
+    padding: 20px;
+    border: none;
+    /* make the grey box behind the form wider on the right side */
+    padding-right: 40px;
   }
   
   input {
@@ -18,9 +24,17 @@ body {
   }
   
   input[type="submit"] {
-    background-color: #000;
+    background-color: crimson;
     color: #fff;
     border: none;
     cursor: pointer;
+    margin: 0 auto;
+    margin-left: 10px;
+  }
+  
+  h2 {
+    font-family: cursive;
+    text-align: center;
+    color: crimson;
   }
   
